--- a/356F 2/app/src/main/res/values/colors.xml
+++ b/356F 2/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#47b023</color>
+    <color name="colorPrimary">#092cf1</color>
+    <color name="colorPrimaryDark">#41f903</color>
     <color name="colorAccent">#ff4081</color>
 </resources>
