--- a/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
@@ -159,6 +159,9 @@
             android:layout_marginBottom="27dp"
             android:layout_toStartOf="@+id/btnEdit"
             android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:isIndicator="true"
             android:max="10"
             android:numStars="0"
             android:rating="3"
