--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -227,13 +227,6 @@
                     android:layout_weight="0.28"
                     android:id="@+id/owner2">
 
-                    <ImageView
-                        android:layout_width="140dp"
-                        android:layout_height="80dp"
-                        app:srcCompat="@android:drawable/ic_menu_gallery"
-                        android:id="@+id/ivSellerIcon"
-                        android:layout_weight="1" />
-
                     <LinearLayout
                         android:orientation="vertical"
                         android:layout_width="match_parent"
@@ -303,5 +296,14 @@
         </ScrollView>
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/ibShare"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/ic_menu_share"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp" />
 
 </RelativeLayout>
