--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -171,8 +171,7 @@
                         android:text="Size:"
                         android:layout_height="wrap_content"
                         android:id="@+id/textView25"
-                        android:layout_weight="0.07"
-                        android:layout_width="90dp" />
+                        android:layout_width="89dp" />
 
                     <TextView
                         android:text="US 5"
@@ -191,11 +190,10 @@
                     android:paddingTop="5dp">
 
                     <TextView
-                        android:text="Description:"
-                        android:layout_height="wrap_content"
                         android:id="@+id/textView27"
-                        android:layout_weight="0.07"
-                        android:layout_width="90dp" />
+                        android:layout_width="87dp"
+                        android:layout_height="wrap_content"
+                        android:text="Description:" />
 
                     <TextView
                         android:text="fjaslkfjsdaklfjsdaklfjsdklfjsdklffjdsafjskalfjsalkfjsakfljsfskfjsakffksdkfsdjkfjewnfionasoivnwo"
@@ -246,32 +244,11 @@
                             android:layout_height="wrap_content">
 
                             <TextView
-                                android:text="Contact:"
-                                android:layout_width="180dp"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/textView33"
-                                android:layout_weight="1" />
-
-                            <TextView
-                                android:text="6053 2826"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/tvOwnerPhone"
-                                android:layout_weight="1"
-                                android:textColor="@android:color/background_dark" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:layout_width="180dp"
-                                android:layout_height="wrap_content"
                                 android:id="@+id/textView31"
+                                android:layout_width="180dp"
+                                android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:text="Credibility:" />
+                                android:text="Grading:" />
 
                             <TextView
                                 android:text="TextView"
@@ -299,11 +276,11 @@
 
     <ImageButton
         android:id="@+id/ibShare"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        app:srcCompat="@drawable/ic_menu_share"
-        android:layout_alignParentTop="true"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="30dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="42dp"
+        app:srcCompat="@drawable/ic_menu_share" />
 
 </RelativeLayout>
