--- a/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_profile.xml
@@ -68,7 +68,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.03"
-                    android:text="my post" />
+                    android:text="my Product" />
             </LinearLayout>
 
             <LinearLayout
