--- a/356F 2/app/src/main/res/layout/activity_search_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_search_page.xml
@@ -31,10 +31,10 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="Button"
+                android:id="@+id/btnGoToSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btnGoToSearch" />
+                android:text="search" />
 
         </LinearLayout>
 
