Add , list wishlist finished

--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -44,13 +44,13 @@
                         android:layout_height="170dp" />
 
                     <ImageView
+                        android:id="@+id/ivWishList"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@android:drawable/btn_star_big_off"
-                        android:id="@+id/imageView12"
-                        android:layout_weight="0.28"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true" />
+                        android:layout_weight="0.28"
+                        app:srcCompat="@android:drawable/btn_star_big_off" />
                 </RelativeLayout>
 
                 <LinearLayout
