--- a/356F 2/app/src/main/res/layout/activity_grading_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_grading_page.xml
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cencel" />
+            android:text="Cancel" />
     </LinearLayout>
 
 </LinearLayout>
