--- a/356F 2/app/src/main/res/layout/wish_list_item.xml
+++ b/356F 2/app/src/main/res/layout/wish_list_item.xml
@@ -24,15 +24,14 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/ivImg"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_weight="1"
                     app:srcCompat="@mipmap/ic_launcher" />
 
@@ -58,7 +57,7 @@
                     android:text="user"
                     android:textAlignment="textStart"
                     android:textColor="#333"
-                    android:textSize="24sp" />
+                    android:textSize="18sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -79,9 +78,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="right"
                         android:text="price"
                         android:textColor="#333"
-                        android:textSize="24sp"
+                        android:textSize="18sp"
                         android:visibility="visible" />
 
                 </LinearLayout>
