--- a/356F 2/app/src/main/res/layout/activity_wishlist_list.xml
+++ b/356F 2/app/src/main/res/layout/activity_wishlist_list.xml
@@ -6,8 +6,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1">
+        android:layout_height="match_parent">
 
         <TextView
             android:text="Wish List"
@@ -23,14 +22,12 @@
         <ListView
             android:id="@+id/lvWishList"
             android:layout_width="match_parent"
-            android:layout_height="402dp"
-            android:layout_weight="0.96" />
+            android:layout_height="402dp" />
 
         <Button
             android:id="@+id/btnBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="0dp"
             android:text="Back" />
     </LinearLayout>
 </LinearLayout>
