--- a/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
@@ -1,13 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.bunnyfung.a356f.FragOffer">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,47 +35,59 @@
             android:weightSum="3">
 
             <Button
-                android:text="Processing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:id="@+id/btnProcessing"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true" />
-
-            <Button
-                android:text="Invitation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 android:layout_weight="1"
+                android:text="Processing"
+                android:textColor="#04B404" />
+
+            <Button
                 android:id="@+id/btnInvitation"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/btnProcessing" />
+                android:layout_toStartOf="@+id/btnProcessing"
+                android:layout_weight="1"
+                android:text="Invitation"
+                android:textColor="#04B404" />
 
             <Button
-                android:text="My offer"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:id="@+id/btnMyOffer"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-                android:textColor="#04B404"
-                android:textAlignment="center"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                android:layout_weight="1"
+                android:text="My offer"
+                android:textAlignment="center"
+                android:textColor="#04B404" />
 
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/lvOfferList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
-
     </LinearLayout>
 
-</FrameLayout>
+    <ListView
+        android:id="@+id/lvOfferList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout2"></ListView>
+
+    <ImageButton
+        android:id="@+id/ivReload"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="10dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+</RelativeLayout>
