--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -47,10 +47,10 @@
                         android:id="@+id/ivWishList"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentTop="true"
                         android:layout_weight="0.28"
-                        app:srcCompat="@android:drawable/btn_star_big_off" />
+                        app:srcCompat="@android:drawable/btn_star_big_off"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true" />
                 </RelativeLayout>
 
                 <LinearLayout
@@ -278,9 +278,9 @@
         android:id="@+id/ibShare"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="43dp"
+        app:srcCompat="@drawable/ic_menu_share"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="42dp"
-        app:srcCompat="@drawable/ic_menu_share" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
