--- a/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
@@ -263,13 +263,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="30dp"
-            android:layout_weight="1"
+            android:layout_marginTop="15dp"
+            android:layout_weight="0.13"
             android:text="Agreement"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/darker_gray"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView24"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome to Easy Trade, a Hong Kong online trading community. These terms and conditions are intended to help keep Easy Trade a safe place to trade." />
 
         <CheckBox
             android:id="@+id/cbAgreement"
